--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<!-- Name, Date -->
+<!-- Ethan Newman, 12/17/24 -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paul Allen</title>
+    <h1>Paul Allen</h1>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+ </head>
+ <body>
+    <img src="https://cdn.mos.cms.futurecdn.net/cSEocQHcnRoETgmc2kAgjT.jpg" alt="Image of Paul Allen" height="200px">
+    <br>
+    <cite>https://www.space.com/19333-paul-allen.html</cite>
+    <div>
+        <hr> <!-- Creates a horizontal rule (line) along the entire page-->
+       
+        <!-- Subtitle header, with an italicized Latin name -->
+        <h2>
+                 <b>The Life of Paul Allen</b>      
+       </h2>
+<h3>
+           Paul Allen was born January 21, 1953 in Seattle to Ken and Faye Allen.
+      </h3>
+<hr>
+</div>
+ </body>
+ </html>
