done bio done table done quote to do: style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Paul Allen</title>
     <h1>Paul Allen</h1>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
  </head>
  <body>
     <img src="https://cdn.mos.cms.futurecdn.net/cSEocQHcnRoETgmc2kAgjT.jpg" alt="Image of Paul Allen" height="200px">
@@ -20,9 +21,56 @@
                  <b>The Life of Paul Allen</b>      
        </h2>
 <h3>
-           Paul Allen was born January 21, 1953 in Seattle to Ken and Faye Allen.
+           Paul Allen was born January 21, 1953 in Seattle to Ken and Faye Allen. Allen was always fascinated with science, starting his own science club in his basement when he was 10 years old. Paul attended Lakeside School where he gained a newfound passion for computer science.
+           His love for computers was shared by another student who went by the name Bill Gates. The two quickly bonded and became very good friends and eventually started to work on what would turn out be one of the most life changing creations,
+           <i>Microsoft.</i>
       </h3>
 <hr>
 </div>
  </body>
  </html>
+ <div>
+   <hr> <!-- Creates a horizontal rule (line) along the entire page-->
+  
+   <!-- Subtitle header, with an italicized Latin name -->
+   <h2>
+            <b>Paul Allen Table</b>      
+  </h2>
+  <table>
+   <tr>
+     <th>Birth Date:</th>
+     <th>Death Date:</th>
+     <th>Birthplace:</th>
+     <th>Education:</th>
+     <th>Major Achievements:</th>
+     <th>Awards/Recognition:</th>
+   </tr>
+
+   <tr>
+     <td>Jan. 21, 1953</td>
+     <td>Oct. 15, 2018</td>
+     <td>Seattle</td>
+     <td>Lakeside School, Washington State University, iq 165.</td>
+     <td>Co-founding Microsoft, found the Allen Institutes for AI, Cell, and Brain Science.</td>
+     <td>Recieved the Vangaurd Award, the Cajal Club's W.J.S., and the Krieg Lifetime Achievement Award.</td>
+   </tr>
+ </table>
+ 
+<hr>
+</div>
+</body>
+</html>
+<div>
+   <hr> <!-- Creates a horizontal rule (line) along the entire page-->
+  
+   <!-- Subtitle header, with an italicized Latin name -->
+   <h2>
+            <b>A Quote from Paul Allen</b>      
+  </h2>
+<h3>
+      "In my eperience, each failure contains the seeds of your next succes-if you are willing to learn from it."
+ </h3>
+<hr>
+</div>
+</body>
+</html>
