done background done colors to do: finish up

--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paul Allen</title>
-    <h1>Paul Allen</h1>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
- </head>
- <body>
-    <img src="https://cdn.mos.cms.futurecdn.net/cSEocQHcnRoETgmc2kAgjT.jpg" alt="Image of Paul Allen" height="200px">
-    <br>
-    <cite>https://www.space.com/19333-paul-allen.html</cite>
-    <div>
+  </head>
+  <body>
+    <div class="header">
+      <h1>Paul Allen</h1>
+      <img src="https://cdn.mos.cms.futurecdn.net/cSEocQHcnRoETgmc2kAgjT.jpg" alt="Image of Paul Allen" height="200px">
+      <br>
+      <cite><a href="http://www.space.com/19333-paul-allen.html">https://www.space.com/19333-paul-allen.html</a></cite>
+    </div>
+      <div class="bio">
+
         <hr> <!-- Creates a horizontal rule (line) along the entire page-->
        
         <!-- Subtitle header, with an italicized Latin name -->
         <h2>
-                 <b>The Life of Paul Allen</b>      
+                 <b>The Life of Paul Allen:</b>      
        </h2>
 <h3>
            Paul Allen was born January 21, 1953 in Seattle to Ken and Faye Allen. Allen was always fascinated with science, starting his own science club in his basement when he was 10 years old. Paul attended Lakeside School where he gained a newfound passion for computer science.
@@ -29,12 +32,12 @@
 </div>
  </body>
  </html>
- <div>
+ <div class="bio">
    <hr> <!-- Creates a horizontal rule (line) along the entire page-->
   
    <!-- Subtitle header, with an italicized Latin name -->
    <h2>
-            <b>Paul Allen Table</b>      
+            <b>Paul Allen Table:</b>      
   </h2>
   <table>
    <tr>
@@ -60,16 +63,30 @@
 </div>
 </body>
 </html>
-<div>
+<div class="bio">
    <hr> <!-- Creates a horizontal rule (line) along the entire page-->
   
    <!-- Subtitle header, with an italicized Latin name -->
    <h2>
-            <b>A Quote from Paul Allen</b>      
+            <b>A Quote from Paul Allen:</b>      
   </h2>
 <h3>
       "In my eperience, each failure contains the seeds of your next succes-if you are willing to learn from it."
  </h3>
+<hr>
+</div>
+</body>
+</html>
+<div class="bio">
+  <hr> <!-- Creates a horizontal rule (line) along the entire page-->
+ 
+  <!-- Subtitle header, with an italicized Latin name -->
+  <h2>
+           <b>Link for more Info:</b>      
+ </h2>
+<h3>
+  <cite><a href="https://paulallen.com/About.aspx">https://paulallen.com/About.aspx</a></cite>
+</h3>
 <hr>
 </div>
 </body>
